7_Security/NetworkPolicy/Yaml/MainApi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8session-main-api-networkpolicies
  namespace: np-demo
  labels:
    app: dotnet-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-webapi
  template:
    metadata:
      labels:
        app: dotnet-webapi
    spec:
      containers:
        - name: dotnet-webapi
          image: arunap2509/k8session-svcapi:latest
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: k8session-main-service
  namespace: np-demo
spec:
  selector:
    app: dotnet-webapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30010
  type: NodePort
