7_Security/NetworkPolicy/Yaml/DefaultDeny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: np-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
