7_Security/NetworkPolicy/Yaml/Policies.yml
apiVersion: v1
kind: Namespace
metadata:
  name: np-demo
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: np-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-frontend-to-backend
  namespace: np-demo
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-backend-to-database
  namespace: np-demo
spec: 
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: database
      ports:
        - protocol: TCP
          port: 5432
